Clear memory as intended. Fixes PR#46372.